@@ -6,6 +6,8 @@ Camlp4s Version 4.03:
   will build "camlp5", "camlp5r", "camlp5o", "mkcamlp5", and so on, and
   the library directory will be installed in ocaml library directory as
   name "camlp5".
+* [10 Jul 07] Deleted command "mkcamlp4" which seems not to work any more.
+  This will be fixed in a future version.
 
 Camlp4s Version 4.02:
 ---------------------
